--- a/interface/static/style.css
+++ b/interface/static/style.css
@@ -1,38 +1,65 @@
 * {
 	color: #555;
 	box-sizing: border-box;
-	font-family: sans-serif;
 }
 
 body {
 	margin: 0;
+	background-color: #f5f5f5;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .container {
+    text-align: center;
+}
+
+.card {
+    text-align: left;
+    min-width: 500px;
 	max-width: 700px;
 	padding: 20px;
-	margin: 20px auto;
+	margin: 20px;
 	background-color: white;
-	border: 1px solid #ddd;
 	box-shadow: 0px 5px 10px 0.5px rgba(0, 0, 0, 0.1);
+	display: inline-block;
+	vertical-align: top;
+}
+
+.container-input {
+    background-color: white;
+    padding: 20px 20px 0px 20px;
+    border-bottom: 1px solid #ddd;
+	box-shadow: 0px 5px 10px 0.1px rgba(0, 0, 0, 0.1);
+}
+
+.container-input-content {
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 .nav {
     background-color: #fff;
 	width: 100%;
 	border-bottom: 1px solid #ddd;
-	padding: 20px;
-	margin-bottom: 20px;
+	padding: 10px 20px;
 	min-height: 10px;
 }
 
 #input-message {
 	width: 100%;
-	padding: 10px 20px;
-	font-size: 1.2rem;
+	line-height: 1px;
+	padding: 15px 20px;
+	font-size: 1.4rem;
 	margin-bottom: 15px;
 	border: 1px solid #ddd;
 	outline: none;
+	transition: all 200ms;
+	font-family: 'Open Sans';
+	font-weight: 300;
+}
+
+#input-message:focus {
+	box-shadow: 0px 2px 10px 0.1px rgba(0, 0, 0, 0.1);
 }
 
 .subtitle {
@@ -71,7 +98,9 @@ body {
 }
 
 #title {
-    font-size: 1.4rem;
+    color: #999;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 #credit {
@@ -84,7 +113,7 @@ body {
 
 .checkbox-wrapper, #select-classifier {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
     border: 1px solid #ddd;
     padding: 10px 10px;
     background-color: #fff;
@@ -97,9 +126,10 @@ body {
 	font-weight: bold;
 	border: 0;
 	background-color: #eee;
+    margin-bottom: 15px;
 }
 
 .checkbox-label {
-    margin-right: 20px;
+    margin-right: 5px;
     font-size: 0.8rem;
 }
