--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -21,14 +21,18 @@
           <option value="MNB">Multinomial Naive Bayes</option>
           <option value="tree">Decision Tree</option>
         </select>
+        <select id="select-mode">
+          <option value="freq">Frequency</option>
+          <option value="bool">Boolean</option>
+        </select>
         <div class="checkbox-wrapper">
           <input type="checkbox" id="checkbox-balanced">
           <label for="checkbox-balanced" class="checkbox-label">Balanced data</label>
         </div>
-        <div class="checkbox-wrapper">
+<!--         <div class="checkbox-wrapper">
           <input type="checkbox" id="checkbox-selected">
           <label for="checkbox-selected" class="checkbox-label">Selected feature</label>
-        </div>
+        </div> -->
         <input type="submit" id="btn-submit" value="Submit">
       </form>
     </div>
