improved interface style

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -39,7 +39,7 @@
   </div>
   <div class="container">
     <div class="card">
-      <span class="subtitle">Sentences</span>
+      <span class="subtitle">Text</span>
       <span id="message-text">-</span>
       <span class="subtitle">Predicted Intent</span>
       <span id="message-intent">-</span>
