--- a/interface/static/style.css
+++ b/interface/static/style.css
@@ -13,14 +13,20 @@ body {
     text-align: center;
 }
 
+@media (max-width: 900px) {
+    .container {
+        text-align: center;
+        overflow-x: scroll;
+    }
+}
+
 .card {
     text-align: left;
-    min-width: 500px;
-	max-width: 700px;
+    width: 500px;
 	padding: 20px;
 	margin: 20px;
 	background-color: white;
-	box-shadow: 0px 5px 10px 0.5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 2px 10px 0.1px rgba(0, 0, 0, 0.1);
 	display: inline-block;
 	vertical-align: top;
 }
@@ -28,8 +34,8 @@ body {
 .container-input {
     background-color: white;
     padding: 20px 20px 0px 20px;
-    border-bottom: 1px solid #ddd;
-	box-shadow: 0px 5px 10px 0.1px rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #eee;
+	box-shadow: 0px 2px 10px 0.1px rgba(0, 0, 0, 0.1);
 }
 
 .container-input-content {
@@ -40,7 +46,7 @@ body {
 .nav {
     background-color: #fff;
 	width: 100%;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #eee;
 	padding: 10px 20px;
 	min-height: 10px;
 }
@@ -51,7 +57,7 @@ body {
 	padding: 15px 20px;
 	font-size: 1.4rem;
 	margin-bottom: 15px;
-	border: 1px solid #ddd;
+	border: 1px solid #eee;
 	outline: none;
 	transition: all 200ms;
 	font-family: 'Open Sans';
@@ -81,9 +87,10 @@ body {
 
 #message-details {
 	display: block;
-	overflow-x: scroll;
+	overflow: scroll;
 	background-color: #f5f5f5;
 	min-height: 20px;
+	height: 250px;
 	padding: 10px;
 	margin: 5px 0;
 	font-family: "Courier New", Courier, monospace;
@@ -114,23 +121,43 @@ body {
 .checkbox-wrapper, #select-classifier, #select-mode {
     display: inline-block;
     margin-right: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #eee;
     padding: 10px 10px;
     background-color: #fff;
     margin-bottom: 15px;
+    font-size: small;
 }
 
 #btn-submit {
 	cursor: pointer;
-	padding: 12px 20px;
+	padding: 12px 25px;
 	font-size: 0.8rem;
 	font-weight: bold;
 	border: 0;
-	background-color: #eee;
+	background-color: #4285f4;
+	color: white;
     margin-bottom: 15px;
+    transition: all 200ms;
+    border-radius: 4px;
+    outline: none;
+    vertical-align: top;
+}
+
+@media (min-width: 900px) {
+    #btn-submit {
+        float: right;
+    }
+}
+
+#btn-submit:hover {
+	box-shadow: 0px 2px 5px 0.1px rgba(0, 0, 0, 0.2);
+}
+
+#btn-submit:active {
+	background-color: #1255c4;
 }
 
 .checkbox-label {
     margin-right: 5px;
-    font-size: 0.8rem;
+    font-size: small;
 }
