add pipeline script and add message-normalization in interface

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -26,7 +26,7 @@
           <option value="bool">Boolean</option>
         </select>
         <div class="checkbox-wrapper">
-          <input type="checkbox" id="checkbox-balanced">
+          <input type="checkbox" id="checkbox-balanced" checked>
           <label for="checkbox-balanced" class="checkbox-label">Balanced data</label>
         </div>
 <!--         <div class="checkbox-wrapper">
