--- a/interface/static/style.css
+++ b/interface/static/style.css
@@ -118,7 +118,7 @@ body {
 	color: #bbb;
 }
 
-.checkbox-wrapper, #select-classifier, #select-mode {
+.checkbox-wrapper, select {
     display: inline-block;
     margin-right: 10px;
     border: 1px solid #eee;
@@ -126,6 +126,11 @@ body {
     background-color: #fff;
     margin-bottom: 15px;
     font-size: small;
+    transition: all 200ms;
+}
+
+.checkbox-wrapper:hover, select:hover {
+	box-shadow: 0px 2px 5px 0.1px rgba(0, 0, 0, 0.1);
 }
 
 #btn-submit {
