add feature question_mark and update interface

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -29,10 +29,10 @@
           <input type="checkbox" id="checkbox-balanced" checked>
           <label for="checkbox-balanced" class="checkbox-label">Balanced data</label>
         </div>
-<!--         <div class="checkbox-wrapper">
+        <div class="checkbox-wrapper">
           <input type="checkbox" id="checkbox-selected">
           <label for="checkbox-selected" class="checkbox-label">Selected feature</label>
-        </div> -->
+        </div>
         <input type="submit" id="btn-submit" value="Submit">
       </form>
     </div>
