update interface to support selected features

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -30,7 +30,7 @@
           <label for="checkbox-balanced" class="checkbox-label">Balanced data</label>
         </div>
         <div class="checkbox-wrapper">
-          <input type="checkbox" id="checkbox-selected">
+          <input type="checkbox" id="checkbox-selected" checked>
           <label for="checkbox-selected" class="checkbox-label">Selected feature</label>
         </div>
         <input type="submit" id="btn-submit" value="Submit">
